# Clib

./: .gitignore  .modules  CMakeLists.txt  Clib.toml  README.md  TODO.md  check.sh  files.h  interface.h  lib.h  makefile  math.h  memory.h  network.h  random.h  review.md  test_json_set_array_main.c  times.h  types.h
Manager/: .gitignore  Makefile  README.md  modulesmng
Manager/dev/: TODO.md  config.toml
Manager/src/: cli.c  cmake.c  fs.c  init.c  main.c  manager.h  memory.c  setup.c  types.h
Manager/src/sub-command/: list.c  setup.c
_internal_/: CMakeLists.txt  _config_.c  _config_.h  _format_.c  _internal_.h  _memory.c  _strings_.c  _types_.h
files/: CMakeLists.txt  conf.h  csv.h  json.h  toml.h
files/conf/: CMakeLists.txt  setting.h  types.h
files/conf/_internal_/: _conf.h  _memory.c  _types.h
files/conf/dev/: exemple.conf
files/csv/: csv.c  types.h
files/csv/_internal_/: _access.c  _csv.c  _csv.h  _csv_memory.c  _errors.C  _parser.c  _types.h
files/filesystem/: TODO.md
files/json/: CMakeLists.txt  json.c  types.h
files/json/_internal_/: _access.c  _check.c  _format.c  _get.c  _json.h  _parser.c  _tools.c  _types.h  _write.c
files/json/_internal_/edit/: _json_edit.h  _set.c
files/json/controls/: CMakeLists.txt  main.c
files/toml/: CMakeLists.txt  setting.h  toml.c  types.h
files/toml/_internal_/: _edit.c  _error.c  _extract.c  _format.c  _memory.c  _parsing.c  _path.c  _string.c  _toml.c  _toml.h  _types.h
files/toml/controls/: main.c
interface/: CMakeLists.txt  args.h  dotenv.h  http.h  interface.h  log.h  makefile
interface/args/: Args.md  CMakeLists.txt  args.c  args_edit.c  args_error.c  args_extract.c  args_memory.c  args_parsing.c  types.h
interface/args/_internal_/: _args.c  _args.h  _args_add.c  _args_builtin.c  _args_checks.c  _args_config.c  _args_edit.c  _args_errors.c  _args_extract.c  _args_memory.c  _args_parser.c  _checks.c  _config.c  _debug.c  _json.c  _parser.c  _types.h
interface/args/controls/: controls.sh  main.c
interface/dotenv/: CMakeLists.txt  load.c
interface/dotenv/_internal_/: _dotenv.h  _load.c
interface/http/: types.h
interface/io/: CMakeLists.txt  io.c  io.h  types.h
interface/io/_internal_/: _io.c  _io.h  _types.h
interface/io/_internal_/printf/: _parser.c  _printf.c  _printf.h  _types.h
interface/json/: CMakeLists.txt  json.c  json.h  types.h
interface/json/_internal_/: _access.c  _format.c  _json.h  _memory.c  _parser.c  _set.c  _string.c  _tools.c  _types.h  _write.c
interface/json/_internal_/edit/: _set.c  _set_logic.c  _unset.c
interface/log/: CMakeLists.txt  log.c  log.h  types.h
interface/log/_internal_/: _init.c  _log.c  _log.h  _print.c  _types.h
interface/log/controls/: main.c
math/: math.h  types.h
memory/: CMakeLists.txt  access.h  makefile  manager.h  memory.c  memory.h  string.c  types.h
memory/_internal_/: _memory.c  _memory.h  _types.h
memory/buffer/: types.h
memory/manager/_internal_/: _memory.c  _memory.h  _storage.c  _types.h
memory/string/: types.h
network/: CMakeLists.txt  communication.h  makefile  network.c  network.h  protocols.h  types.h
network/_internal_/: _network.h
network/_internal_/client/: _client.c  _client.h
network/_internal_/io/: _io.c  _io.h
network/_internal_/server/: _server.c  _server.h
network/communication/: CMakeLists.txt  network.c
network/communication/_internal_/io/: _io.c
network/protocols/: CMakeLists.txt  HTTP.h
network/protocols/HTTP/: HTTP.c  TODO.md  codes.h  error.h  settings.h  types.h
network/protocols/HTTP/1.0/: 1.0.h  _parser-1.0.h
network/protocols/HTTP/_internal_/: _HTTP.h  _memory.c  _methods.c  _parser.c  _string.c  _string.h  _types.h
network/protocols/HTTP/controls/: .gitkeep  main.c
procesor/: procesor.h
procesor/controls/: main.c
processor/: processor.h
processor/controls/: main.c
prossesor/: prossesor.h
prossesor/controls/: main.c
random/: CMakeLists.txt  random.c  random.h
standards/: CMakeLists.txt  config.h  formating.h  lib_config.h  lib_standards.h  standards.h  types.h
string/: string.h  types.h
string/_internal_/: _string.c  _string.h
tests/: test_args.c
times/: CMakeLists.txt  convert.c  times.h  types.h
types/: CMakeLists.txt  setting.h  types.c  types.h
types/_internal_/: _types.h
types/_internal_/map/: _map.c  _map.h  _memory.c  _search.c
types/controls/: main.c  map.c
